sort.basic.bubble.AlgBubbleSort2.scala.error
Erreur de compilation :
AlgBubbleSort2:22: error: ')' expected but '}' found.
  } 
  ^